--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mantine/hooks": "^7.12.2",
     "@mantine/modals": "^7.12.2",
     "@tabler/icons-react": "^3.14.0",
+    "@tanstack/react-query": "^5.56.2",
+    "axios": "^1.7.7",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
